--- a/index.html
+++ b/index.html
@@ -3,24 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <title>Will You Be My Valentine? 💖</title>
+
+    <meta
+      name="description"
+      content="A cute Valentine surprise with floating hearts, teasing buttons, and a happy ending 💕"
+    />
+    <meta name="author" content="Someone Hopelessly Romantic" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Will You Be My Valentine? 💘" />
+    <meta
+      property="og:description"
+      content="I already know the answer… but click anyway 😏💖"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/valentine-preview.png" />
+    <meta property="og:url" content="https://YOUR-PROJECT.vercel.app" />
 
+    <!-- Twitter / X -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Will You Be My Valentine? 💕" />
+    <meta
+      name="twitter:description"
+      content="A tiny game with one obvious answer 😌"
+    />
+    <meta name="twitter:image" content="/valentine-preview.png" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+    <script type="module" src="/src/ma
