--- a/index.html
+++ b/index.html
@@ -8,30 +8,20 @@
 
     <meta
       name="description"
-      content="A cute Valentine surprise with floating hearts, teasing buttons, and a happy ending 💕"
+      content="A cute Valentine surprise with floating hearts and a happy ending 💕"
     />
-    <meta name="author" content="Someone Hopelessly Romantic" />
 
-    <!-- Open Graph -->
     <meta property="og:title" content="Will You Be My Valentine? 💘" />
     <meta
       property="og:description"
-      content="I already know the answer… but click anyway 😏💖"
+      content="I already know the answer… but click anyway 😏"
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/valentine-preview.png" />
-    <meta property="og:url" content="https://YOUR-PROJECT.vercel.app" />
-
-    <!-- Twitter / X -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Will You Be My Valentine? 💕" />
-    <meta
-      name="twitter:description"
-      content="A tiny game with one obvious answer 😌"
-    />
-    <meta name="twitter:image" content="/valentine-preview.png" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/ma
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
